--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
         "postinstall": "npm install --prefix backend"
     },
     "dependencies": {
-        "dotenv": "^16.0.1"
+        "dotenv": "^16.0.1",
+        "express": "^4.18.1"
     }
 }
